@startuml classes_UserClasses
set namespaceSeparator none

' Define the classes
class "Pipeline" as data_pipeline_berlin.Pipeline {
  steps : List[Any]
  run(data: List[Dict[str, Any]]) -> List[Dict[str, Any]]
}

class "LoadRawData" as data_pipeline_berlin.LoadRawData {
  load_path : str
  process(data) -> List[Dict[str, Any]]
}

class "RenameTargetColumn" as data_pipeline_berlin.RenameTargetColumn {
  rename_column : Dict[str, str]
  process(data: List[Dict[str, Any]]) -> List[Dict[str, Any]]
}

class "FilterColumns" as data_pipeline_berlin.FilterColumns {
  required_columns : List[str]
  process(data: List[Dict[str, Any]]) -> List[Dict[str, Any]]
}

class "Cleaner" as data_pipeline_berlin.Cleaner {
  reject_data : List[str]
  process(data: List[Dict[str, Any]]) -> List[Dict[str, Any]]
}

class "FilterBerlin" as data_pipeline_berlin.FilterBerlin {
  filter_column : str
  filter_plz_max : int
  filter_plz_min : int
  process(data: List[Dict[str, Any]]) -> List[Dict[str, Any]]
}

class "Validator" as data_pipeline_berlin.Validator {
  required_types : Dict[str, Any]
  process(data: List[Dict[str, Any]]) -> List[Dict[str, Any]]
}

class "SaveProcessedDate" as data_pipeline_berlin.SaveProcessedDate {
  save_path : str
  process(data: List[Dict[str, Any]]) -> List[Dict[str, Any]]
}


' Place Pipeline in the center
data_pipeline_berlin.Pipeline -[hidden]- data_pipeline_berlin.RenameTargetColumn
data_pipeline_berlin.Pipeline -[hidden]- data_pipeline_berlin.SaveProcessedDate


' Create the circle with arrows labeled "data"
data_pipeline_berlin.Pipeline --> data_pipeline_berlin.LoadRawData : start with
data_pipeline_berlin.LoadRawData --> data_pipeline_berlin.RenameTargetColumn : data
data_pipeline_berlin.RenameTargetColumn --> data_pipeline_berlin.FilterColumns : data
data_pipeline_berlin.FilterColumns --> data_pipeline_berlin.Cleaner : data
data_pipeline_berlin.Cleaner -up-> data_pipeline_berlin.FilterBerlin : data
data_pipeline_berlin.FilterBerlin -up-> data_pipeline_berlin.Validator : data
data_pipeline_berlin.Validator -up-> data_pipeline_berlin.SaveProcessedDate : data
data_pipeline_berlin.SaveProcessedDate -up-> data_pipeline_berlin.Pipeline : end with


@enduml